# secguard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.claude/: settings.local.json
.codex-plugin/: hooks.json
.github/workflows/: ci.yml  release.yml
.s5d/: aliases.yaml  config.yaml  index.yaml  ledger.yaml
.s5d/records/: decision.guard-indirection-hardening__20260507.record.yaml  decision.next-on-bash-guard-parity__20260505.record.yaml  feat.bash-guard-rule-expansion__20260505.record.yaml  feat.guard-indirection-hardening__20260507.record.yaml
crates/secguard-brain/: Cargo.toml
crates/secguard-brain/src/: lib.rs
crates/secguard-cli/: Cargo.toml
crates/secguard-cli/src/: cmd_guard.rs  cmd_init.rs  cmd_model.rs  cmd_scan.rs  cmd_update.rs  hook.rs  main.rs  telemetry.rs
crates/secguard-cli/tests/: cli.rs
crates/secguard-guard/: Cargo.toml
crates/secguard-guard/src/: ast.rs  brain.rs  config.rs  heuristic.rs  lib.rs  policy.rs  rm.rs  rule_id.rs  rules.rs
crates/secguard-guard/tests/: fixture_runner.rs
crates/secguard-secrets/: Cargo.toml
crates/secguard-secrets/src/: lib.rs  redactor.rs  rules.rs  scanner.rs
crates/secguard-server/src/: state.rs
crates/secguard-server/src/handlers/: hook.rs
deploy/helm/secguard/: Chart.yaml  values.yaml
docs/proposals/: 001-ast-parser-and-wrapper-unwrap.md
training/: .gitignore  MODEL_CARD.md  eval_model.sh  lora_0.8b.yaml  lora_2b.yaml  post_pipeline.sh  prepare_dataset.py  publish_hf.sh  run_pipeline.sh  run_pipeline_0.8b.sh
(+7 files in other folders)
