[package]
name = "secguard-brain"
description = "GGUF micro-brain inference for secguard classifiers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
metal = ["llama-cpp-2/metal"]

[dependencies]
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git" }
log = { workspace = true }
dirs = { workspace = true }
