[package]
name = "secguard-secrets"
description = "Secret and credential detection for secguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ml = ["secguard-brain"]

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
secguard-brain = { path = "../secguard-brain", optional = true }

[dev-dependencies]
pretty_assertions = "1"
